# gate22

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md
backend/: .env.example  .gitignore  .importlinter  .prettierrc.json  Dockerfile.control_plane  Dockerfile.mcp  Dockerfile.migration  Dockerfile.runner  Dockerfile.virtual_mcp  README.md  compose.ci.yml  compose.yml  pyproject.toml
backend/aci/alembic/: env.py
backend/aci/cli/: README.md  aci.py  config.py
backend/aci/common/: auth_credentials_manager.py  embeddings.py  enums.py  exceptions.py  logging_setup.py  mcp_auth_manager.py  mcp_tool_utils.py  oauth2_manager.py  openai_client.py  sentry.py  test_utils.py  url_utils.py  utils.py
backend/aci/control_plane/: access_control.py  auth_credentials_manager.py  config.py  dependencies.py  exceptions.py  google_login_utils.py  main.py  oauth2_manager.py  rbac.py  schema_utils.py  token_utils.py
backend/aci/mcp/: config.py  dependencies.py  exceptions.py  logging.py  main.py
backend/aci/virtual_mcp/: config.py  context.py  dependencies.py  exceptions.py  main.py  utils.py
backend/mcp_servers/accredible/: server.json  tools.json
backend/mcp_servers/active_campaign/: server.json  tools.json
backend/mcp_servers/aero_workflow/: server.json  tools.json
backend/mcp_servers/agent_mail/: server.json  tools.json
backend/mcp_servers/aidbase/: server.json  tools.json
backend/mcp_servers/airtable/: server.json  tools.json
backend/mcp_servers/akkio/: server.json  tools.json
backend/mcp_servers/all_images/: server.json  tools.json
backend/mcp_servers/anchor_browser/: server.json  tools.json
backend/mcp_servers/apaleo/: server.json  tools.json
backend/mcp_servers/api_template/: server.json  tools.json
backend/mcp_servers/arxiv/: server.json  tools.json
backend/mcp_servers/atlassian/: server.json  tools.json
backend/mcp_servers/baidu_map/: server.json  tools.json
backend/mcp_servers/baserow/: server.json  tools.json
backend/mcp_servers/brave_search/: server.json  tools.json
backend/mcp_servers/breezy/: server.json  tools.json
backend/mcp_servers/browserbase/: server.json  tools.json
backend/mcp_servers/cal/: server.json  tools.json
backend/mcp_servers/calendly/: server.json  tools.json
backend/mcp_servers/clickup/: server.json  tools.json
backend/mcp_servers/cloudflare/: server.json  tools.json
backend/mcp_servers/coda/: server.json  tools.json
backend/mcp_servers/cognito_forms/: server.json  tools.json
backend/mcp_servers/coingecko/: server.json  tools.json
backend/mcp_servers/coinmarketcap/: server.json  tools.json
backend/mcp_servers/context7/: server.json  tools.json
backend/mcp_servers/daytona/: server.json  tools.json
(+626 files in other folders)
